@@ -20,9 +20,9 @@ public class GetNetworkUseCaseIterative0m1 {
         this.conceptRepository = conceptRepository;
     }
 
-    public NetworkConcepts execute() {
+    public NetworkConcepts execute(boolean showDeleted) {
         List<Edge> edges = new ArrayList<>();
-        List<Concept> allConcept = conceptRepository.findAll();
+        List<Concept> allConcept = showDeleted ? conceptRepository.findAll() : conceptRepository.findAllExcludeDeleted();
 
         for (Concept concept : allConcept)
             edges.addAll(findEdges(concept, allConcept));
@@ -31,15 +31,15 @@ public class GetNetworkUseCaseIterative0m1 {
     }
 
     private List<Edge> findEdges(Concept concept, List<Concept> allConcept) {
-        List<String> refs = extractTextBetweenDelimiters(concept.description());
+        List<String> refs = extractTextBetweenDelimiters(concept.getDescription());
         List<Edge> edges = new ArrayList<>();
         refs.forEach(ref -> {
             var filterList = allConcept.stream()
                     .parallel()
-                    .filter(concept1 -> concept1.id().toString().equals(ref)).toList();
+                    .filter(concept1 -> concept1.getId().toString().equals(ref)).toList();
 
             if(!filterList.isEmpty()) {
-                edges.add(new Edge(concept.id(), filterList.get(0).id()));
+                edges.add(new Edge(concept.getId(), filterList.getFirst().getId()));
 
             }
         });
